maze.island.IslandMaze.scala.error
Compilation error:
IslandMaze:6: error: not found: value totheNorth
    totheNorth(dir);
    ^IslandMaze:31: error: reassignment to val
    dir = getDirection();
        ^